--- a/log-reg__back-end/package.json
+++ b/log-reg__back-end/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.21",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "jest": "^29.5.0"
