--- a/log-reg__back-end/package.json
+++ b/log-reg__back-end/package.json
@@ -25,6 +25,7 @@
     "winston": "^3.10.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
   }
 }
