--- a/log-reg_front-end/package.json
+++ b/log-reg_front-end/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/react-google-recaptcha": "^2.1.5",
     "prettier": "3.0.0"
   }
 }
