Log 45: README.md updated

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "scripts": {
     "backend": "cd ./log-reg__back-end && npm run start",
-    "frontend": "cd ./log-reg_front-end && npm run start"
+    "frontend": "cd ./log-reg_front-end && npm run start",
+    "log": "git log --oneline"
   }
 }
