--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# logs
+log-reg__back-end/logs/error.log
 
 # dependencies
 /node_modules
