--- a/log-reg_front-end/package.json
+++ b/log-reg_front-end/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.14.2",
