--- a/log-reg_front-end/package.json
+++ b/log-reg_front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
