--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # logs
-log-reg__back-end/logs/error.log
-log-reg__back-end/klucze/privateKey.pem
-log-reg__back-end/klucze/publicKey.pem
-log-reg__back-end/config/envConfig.js
+backend/logs/error.log
+backend/klucze/privateKey.pem
+backend/klucze/publicKey.pem
+backend/config/envConfig.js
 mysql_data/
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-/log-reg__back-end/klucze
-log-reg__back-end/klucze
+/backend/klucze
+backend/klucze
 *.pem
 # testing
 /coverage
