--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
-    "@types/react": "^18.2.16",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-pdf": "^7.5.1",
@@ -56,6 +56,8 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react-google-recaptcha": "^2.1.5",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
