--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
@@ -55,9 +54,9 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
-    "@types/react-google-recaptcha": "^2.1.5",
-    "prettier": "^3.0.3",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.25",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "prettier": "^3.0.3"
   }
 }
